--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,6 +6,15 @@
     <title>TO Do List </title>
 </head>
 <body>
-    <h1>it's a <%= kindOfDay %> </h1>
+    <h1> <%= kindOfDay %>  </h1>
+    <ul>
+        <%for(let i = 0; i < newListItems.length; i++){ %>
+            <li><%= newListItems[i] %> </li>
+       <% } %>
+    </ul>
+<form action="/" method="post">
+    <input type="text" name="newItem" >
+    <button type="submit">add</button>
+</form>
 </body>
 </html>
