--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>TO Do List </title>
 </head>
 <body>
-    <h1> <%= kindOfDay %>  </h1>
-    <ul>
+    <div class="box" id="heading">
+        <h1> <%= kindOfDay %>  </h1>
+    </div>
+    
+    <div class="box">
         <%for(let i = 0; i < newListItems.length; i++){ %>
-            <li><%= newListItems[i] %> </li>
-       <% } %>
-    </ul>
-<form action="/" method="post">
-    <input type="text" name="newItem" >
-    <button type="submit">add</button>
-</form>
+        <div class="item">
+            <input type="checkbox" >
+            <p><%= newListItems[i] %> </p>
+        </div>
+           <% } %>
+        <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+            <button type="submit">+</button>
+        </form>
+    </div>
+    
+
 </body>
 </html>
